feat: complete base layout of admin category management page

--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -2,13 +2,19 @@
   "layout": {
     "sidebar": {
       "dashboard": "Dashboard",
-      "categories": "Categories",
-      "contacts": "Contacts"
+      "categories": "Danh mục",
+      "contacts": "Danh bạ"
     }
   },
   "pages": {
     "dashboard": {
       "title": "Dashboard"
+    },
+    "category": {
+      "title": "Quản lý danh mục",
+      "header": {
+        "create": "Thêm danh mục"
+      }
     }
   }
 }
