feat: complete table layout of admin category management page

--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -14,6 +14,21 @@
       "title": "Quản lý danh mục",
       "header": {
         "create": "Thêm danh mục"
+      },
+      "table": {
+        "columns": {
+          "thumbnail": "Hình ảnh",
+          "code": "Mã danh mục",
+          "name": "Tên danh mục",
+          "categoryGroupCode": {
+            "title": "Nhóm danh mục",
+            "estate": "Bất động sản",
+            "news": "Tin tức"
+          },
+          "actions": {
+            "delete": "Xóa"
+          }
+        }
       }
     }
   }
