--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -63,5 +63,10 @@
   },
   "alert": {
     "errorTrackingCode": "Mã lỗi"
+  },
+  "form": {
+    "imageInput": {
+      "placeholder": "Chọn ảnh"
+    }
   }
 }
