--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -40,6 +40,33 @@
             "oldDraftWillBeDeleted": "Tất cả bài nháp thuộc danh mục này sẽ bị xóa vĩnh viển.",
             "areYouSure": "Bạn có chắc muốn tiếp tục không?"
           }
+        },
+        "modification": {
+          "title": {
+            "create": "Thêm danh mục",
+            "edit": "Chỉnh sửa danh mục"
+          },
+          "form": {
+            "name": {
+              "label": "Tên danh mục",
+              "placeholder": "Nhập tên danh mục",
+              "required": "Tên danh mục không được phép để trống."
+            },
+            "categoryGroupCode": {
+              "label": "Nhóm danh mục",
+              "placeholder": "Chọn nhóm danh mục",
+              "required": "Nhóm danh mục không được phép để trống."
+            },
+            "categoryGroupName": {
+              "estate": "Bất động sản",
+              "news": "Tin tức"
+            },
+            "thumbnail": {
+              "label": "Hình ảnh",
+              "placeholder": "Chọn hình ảnh",
+              "required": "Hình ảnh không được phép để trống."
+            }
+          }
         }
       }
     }
