--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -6,7 +6,7 @@
       "contact": "Danh bạ"
     }
   },
-  "pages": {
+  "page": {
     "dashboard": {
       "title": "Dashboard"
     },
@@ -68,6 +68,12 @@
             }
           }
         }
+      }
+    },
+    "contact": {
+      "title": "Quản lý danh bạ",
+      "header": {
+        "create": "Thêm liên hệ"
       }
     }
   }
