feat: admin location province modification feature

--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -183,12 +183,27 @@
               "oldDraftWillBeDeleted": "Tất cả bài nháp có tỉnh/thành phố này sẽ bị xóa vĩnh viển.",
               "areYouSure": "Bạn có chắc muốn tiếp tục không?"
             }
+          },
+          "modification": {
+            "title": "Thêm tỉnh/thành phố",
+            "form": {
+              "id": {
+                "label": "Tỉnh/thành phố",
+                "placeholder": "Chọn tỉnh/thành phố",
+                "required": "Tỉnh/thành phố không được phép để trống.",
+                "provinceAlreadyExists": "Tỉnh/thành phố đã tồn tại."
+              }
+            }
           }
         },
         "notification": {
           "delete": {
             "provinceDeleted": "Tỉnh/thành phố đã bị xóa vĩnh viễn.",
             "provinceDeleteFailed": "Đã xảy ra lỗi khi xóa tỉnh/thành phố."
+          },
+          "modify": {
+            "provinceCreated": "Đã tạo tỉnh/thành phố mới.",
+            "provinceCreateFailed": "Đã xảy ra lỗi khi thêm tỉnh/thành phố."
           }
         }
       }
