feat(ERE-29): estate management sidebar

--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -4,6 +4,9 @@
       "dashboard": "Dashboard",
       "category": "Danh mục",
       "contact": "Danh bạ",
+      "estate": "Bất động sản",
+      "estate_list": "Danh sách bất động sản",
+      "estate_property": "Thiết lập chi tiết bất động sản",
       "location": "Khu vực hoạt động",
       "location_province": "Tỉnh/Thành phố",
       "location_district": "Quận/Huyện",
