--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -453,7 +453,8 @@
               "addProperty": "Thêm thuộc tính",
               "description": {
                 "label": "Mô tả",
-                "placeholder": "Nhập mô tả"
+                "placeholder": "Nhập mô tả",
+                "required": "Mô tả không được phép để trống."
               }
             }
           },
@@ -466,24 +467,31 @@
             "picker": {
               "title": "Chọn thông tin liên hệ"
             },
-            "pick": "Nhấn để chọn thông tin liên hệ"
+            "pick": "Nhấn để chọn thông tin liên hệ",
+            "required": "Thông tin liên hệ không được phép để trống."
           },
           "media": {
             "title": "Thông tin khác",
-            "avatar": {
-              "label": "Ảnh đại diện",
-              "placeholder": "Chọn ảnh đại diện",
-              "required": "Ảnh đại diện không được phép để trống."
-            },
-            "youtube": {
-              "label": "Youtube",
-              "placeholder": "Nhập đường dẫn từ Youtube"
-            },
-            "image": {
-              "label": "Hình ảnh khác",
-              "placeholder": "Chọn ảnh",
-              "required": "Ảnh không được phép để trống."
+            "form": {
+              "avatar": {
+                "label": "Ảnh đại diện",
+                "placeholder": "Chọn ảnh đại diện",
+                "required": "Ảnh đại diện không được phép để trống."
+              },
+              "youtube": {
+                "label": "Youtube",
+                "placeholder": "Nhập đường dẫn từ Youtube"
+              },
+              "image": {
+                "label": "Hình ảnh khác",
+                "placeholder": "Chọn ảnh",
+                "required": "Ảnh không được phép để trống."
+              }
             }
+          },
+          "action": {
+            "save": "Lưu nháp",
+            "publish": "Lưu và xuất bản"
           }
         }
       },
