--- a/src/locales/vi/common.json
+++ b/src/locales/vi/common.json
@@ -73,5 +73,9 @@
         "uploadFailed": "Tải ảnh lên không thành công"
       }
     }
+  },
+  "toast": {
+    "success": "Thành công!",
+    "error": "Lỗi!"
   }
 }
