--- a/src/locales/vi/admin.json
+++ b/src/locales/vi/admin.json
@@ -519,6 +519,8 @@
         "notification": {
           "unPublished": "Bài viết đã bị huỷ xuất bản.",
           "unPublishFailed": "Hiện không thể huỷ xuất bản bài viết. Vui lòng thử lại sau.",
+          "published": "Bài viết đã được xuất bản.",
+          "publishFailed": "Hiện không thể xuất bản bài viết. Vui lòng thử lại sau.",
           "movedToTop": "Bài viết đã được đưa lên đầu.",
           "moveToTopFailed": "Hiện không thể đưa bài viết lên đầu. Vui lòng thử lại sau."
         },
@@ -528,7 +530,8 @@
             "unPublish": "Huỷ xuất bản bài viết '{{title}}'?"
           },
           "message": {
-            "unPublish": "Bạn có chắc muốn huỷ xuất bản bài viết này? Bài viết sẽ bị ẩn khỏi mọi kết quả tìm kiếm. Bạn và tất cả những thành viên có quyển khác có thể tiếp tục chỉnh sửa bài viết và xuất bản lại sau."
+            "unPublish": "Bạn có chắc muốn huỷ xuất bản bài viết này? Bài viết sẽ bị ẩn khỏi mọi kết quả tìm kiếm. Bạn có thể tiếp tục chỉnh sửa bài viết và xuất bản lại sau.",
+            "publish": "Bạn có chắc muốn xuất bản bài viết này? Bài viết sẽ hiển thị công khai trên trang và mọi người có thể tìm thấy bài viết này, bằng bất kỳ cách nào."
           }
         }
       },
